Code Clean Up - ItelliJ Idea code inspection applied